--- a/hyperledger/docker-crypto/docker-compose-peer0-org1.yml
+++ b/hyperledger/docker-crypto/docker-compose-peer0-org1.yml
@@ -12,10 +12,8 @@ services:
 
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=ubuntu_default
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      - FABRIC_LOGGING_SPEC=INFO
+      - FABRIC_LOGGING_SPEC=info
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_GOSSIP_USELEADERELECTION=true
-      - CORE_PEER_GOSSIP_ORGLEADER=false
       - CORE_PEER_PROFILE_ENABLED=true
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
@@ -23,9 +21,9 @@ services:
       - CORE_PEER_ID=peer0.org1.odins.com
       - CORE_PEER_ADDRESS=10.9.26.103:7051
       - CORE_PEER_GOSSIP_USELEADERELECTION=false
-      - CORE_PEER_GOSSIP_ORGLEADER=false
+      - CORE_PEER_GOSSIP_ORGLEADER=true
       #- CORE_PEER_GOSSIP_BOOTSTRAP=10.9.25.30:7051
-      #- CORE_PEER_GOSSIP_EXTERNALENDPOINT=10.9.25.11:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=10.9.26.103:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_VM_DOCKER_ATTACHSTDOUT=true
       - CORE_CHAINCODE_STARTUPTIMEOUT=1200s
@@ -48,11 +46,14 @@ services:
         - ~/crypto-config/peerOrganizations/org1.odins.com/peers/peer0.org1.odins.com/tls:/etc/hyperledger/fabric/tls
         - peer0.org1.odins.com:/var/hyperledger/production
         - ~/hosts:/etc/hosts
-
     ports:
       - "7051:7051"
       - "7052:7052"
       - "7053:7053"
+    extra_hosts:
+      - "orderer.odins.com:10.9.26.101"
+      - "ca.odins.com:10.9.26.102"
+
     depends_on:
       - couchdb
   couchdb:
