added gitignore and changed build.gradle mainclass

--- a/hyperledger/chaincodes/GuardianSC/build.gradle
+++ b/hyperledger/chaincodes/GuardianSC/build.gradle
@@ -34,7 +34,7 @@ repositories {
 }
 
 application {
-    mainClass = 'contracts.PublicInformationContract'
+    mainClass = 'contracts.GuardianDataSaver'
 }
 
 test {
