--- a/ChainREST/package.json
+++ b/ChainREST/package.json
@@ -12,6 +12,7 @@
     "fabric-network-simple": "^1.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
