--- a/ChainREST/package.json
+++ b/ChainREST/package.json
@@ -13,7 +13,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-cron": "^2.0.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "axios":"0.24.0",
+    "lodash":"4.3.0"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
