--- a/ChainREST/package.json
+++ b/ChainREST/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "^1.4.6",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "fabric-network-simple": "git://github.com/agustin-marin/fabric-netowrk-simple.git#4247d8784b3adabb3239bd6417559f4a28b1c62a",
+    "fabric-network-simple": "git://github.com/agustin-marin/fabric-netowrk-simple.git",
     "http-errors": "~1.6.3",
     "lodash": "4.3.0",
     "morgan": "~1.9.1",
